# mcp-crawl4ai-rag

./: .dockerignore  .env.example  README.md  crawled_pages.sql  docker-compose.yml  postgres-migration.tasks.instructions.md  pyproject.toml  setup_postgres.py
demo/: demo_all_providers.py  demo_logging.py
docs/: DOCKER_COMPOSE.md  LLM_PROVIDERS.md  LLM_PROVIDER_IMPLEMENTATION.md  MIGRATION.md
src/: crawl4ai_mcp.py  llm_providers.py  postgres_utils.py
tests/: test_llm_providers.py  test_unit_llm_providers.py  validate_llm_providers.py
